--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Working with Saurav during the research paper project was a truly enriching experience. His dedication to the topic and his ability to delve into complex concepts were impressive. Under my guidance, He demonstrated a keen analytical mind and a strong grasp of the subject matter. The research paper [he/she] produced was of exceptional quality, showcasing his commitment to academic excellence.
+                    Working with Saurav during the research paper project was a truly enriching experience. His dedication to the topic and his ability to delve into complex concepts were impressive. Under my guidance, He demonstrated a keen analytical mind and a strong grasp of the subject matter. The research paper he produced was of exceptional quality, showcasing his commitment to academic excellence.
                   </p>
                 </div>
 
