--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://github.com/saurav2658/Laundry-Management-System/tree/main">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -856,7 +856,7 @@
             </li> -->
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+              <a href="https://github.com/saurav2658/CANCO">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
